--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=1000, initial-scale=1.0">
+		<link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link href="feed.xml" rel="alternate" type="application/rss+xml">
     </head>
